--- a/info/docs.texi
+++ b/info/docs.texi
@@ -24171,7 +24171,7 @@ Turn screen white.
 @node URL Templates 
 @section URL Templates
 
-This section documents a total of 75 URL Templates.
+This section documents a total of 76 URL Templates.
 
 All of these URL templates can be invoked via command
  @kbd{M-x emacspeak-url-template-fetch} normally bound to
@@ -24238,7 +24238,9 @@ codes.@item @b{Dictionary Lookup}
 
 Dictionary Lookup@item @b{Finance Google Search}
 
-Display content from Google Finance.@item @b{FreeSound}
+Display content from Google Finance.@item @b{Finance Summary From Google}
+
+Display top stocks  from Google Finance.@item @b{FreeSound}
 
 Search FreeSound.@item @b{GitHub Search}
 
